fixing stlying issues so that components align

--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -6,13 +6,10 @@ body {
     background-color: rgb(30, 30, 30);
     z-index: 1;
     text-align: center;
-    position: absolute; 
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding: 1rem; 
     border-radius: 15px;
     width: 50rem;
+    margin-top: 10rem;
 }
 
 .header {
@@ -35,13 +32,12 @@ body {
 
 .video-background {
     position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     z-index: -1;
+    object-fit: cover;
 }
 
 .center-align {
@@ -55,7 +51,6 @@ body {
 
 .learn-more-button {
     color: white;
-    width: auto;
     font-size: 1.5rem;
     cursor: pointer;
     margin-top: 3rem;
